# t3-tape

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  dist-workspace.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
crates/t3-tape/: Cargo.toml
crates/t3-tape/src/: exit.rs  lib.rs  main.rs
crates/t3-tape/src/agent/: exec.rs  http.rs  mod.rs  none.rs  schema.rs
crates/t3-tape/src/cli/: mod.rs
crates/t3-tape/src/commands/: export.rs  hooks.rs  mod.rs  patch_add.rs  patch_import.rs  patch_list.rs  patch_show.rs  rederive.rs  triage.rs  triage_approve.rs  update.rs  validate.rs
crates/t3-tape/src/patch/: diff.rs  meta.rs  mod.rs  patch_id.rs  patch_md.rs  surface_hash.rs
crates/t3-tape/src/store/: atomic.rs  lock.rs  mod.rs  paths.rs  schema.rs  time.rs
crates/t3-tape/src/update/: apply.rs  git.rs  mod.rs  resolve.rs  sandbox.rs  triage.rs
crates/t3-tape/src/validate/: full.rs  mod.rs  staged.rs
crates/t3-tape/tests/: init.rs  patch.rs  update.rs  validate.rs
crates/t3-tape/tests/fixtures/: multi-file.diff
docs/: agent-contract.md  implementation-status.md  patchmd.md  update-flow.md
examples/: README.md
examples/agent-handoff-builder/: README.md  package.json
examples/agent-kit/: README.md  index.js  package.json
examples/basic-fork/: README.md  package.json
examples/dev-env-doctor/: README.md  package.json
examples/fleet-upgrade-coordinator/: README.md  package.json
examples/migration-autopilot/: README.md  package.json
examples/migration-review-assistant/: README.md  (+1 more)
scripts/: e2e.ps1
(+66 files in other folders)
